--- a/packages/@myntra/uikit-compounds/src/Grid/Grid.scss
+++ b/packages/@myntra/uikit-compounds/src/Grid/Grid.scss
@@ -81,6 +81,8 @@ $named-sizes: (
   flex-shrink: 1;
   padding-left: var(--column-inset);
   padding-right: var(--column-inset);
+  overflow: paged-x;
+  overflow: -webkit-paged-x;
 
   &.narrow { flex: none; }
 
